tdf#118963 Hand over a SdrModel to createControlLabelPair

Change-Id: I34a35ff0700d14474fa9946851812c25c4eb4bc1
Reviewed-on: https://gerrit.libreoffice.org/58187
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>
(cherry picked from commit e5ee79b5c089e72e6b24c04c7c820d706bd39993)
Reviewed-on: https://gerrit.libreoffice.org/61316
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>