svx/source/inc/fmvwimp.hxx
@@ -261,7 +261,11 @@ private:
         sal_uInt16 _nLabelObjectID,
         SdrPage* _pLabelPage,
         SdrPage* _pControlPage,
-        SdrModel* _pModel,
+
+        // tdf#118963 Need a SdrModel for SdrObject creation. To make the
+        // demand clear, hand over a SdrMldel&
+        SdrModel& _rModel,
+
         SdrUnoObj*& _rpLabel,
         SdrUnoObj*& _rpControl
     );
